force-app/main/default/objects/Opportunity/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <description>Time frame for Customer to pay invoices</description>
    <inlineHelpText>Payment is due X days after the invoice date.</inlineHelpText>
    <label>Payment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>NET 15</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>