force-app/main/default/objects/Opportunity/fields/Ready_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Close</label>
    <type>Checkbox</type>
</CustomField>