force-app/main/default/objects/Opportunity/fields/Reconcile_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Admin only: For expansions, will update the associated contract and requote the future renewal appropriately.</inlineHelpText>
    <label>Reconcile Opportunity</label>
    <type>Checkbox</type>
</CustomField>