force-app/main/default/objects/Opportunity/fields/Required_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Required_Integrations__c</fullName>
    <label>Required Integrations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>