force-app/main/default/objects/Opportunity/fields/RevOps_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>RevOps_Review_Status__c</fullName>
    <description>Used to indicate the status of an Opportunity submitted to RevOps.</description>
    <label>RevOps Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>