force-app/main/default/objects/Opportunity/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <label>Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product / Feature Gap</fullName>
            </value>
            <value>
                <fullName>Bugs</fullName>
            </value>
            <value>
                <fullName>Poor Support</fullName>
            </value>
            <value>
                <fullName>Lack of Product Adoption</fullName>
            </value>
            <value>
                <fullName>Lack of ROI</fullName>
            </value>
            <value>
                <fullName>Financial e.g. Acquisition / Downturn / No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Onboarding Issues</fullName>
            </value>
            <value>
                <fullName>Lost Champion / New Leadership</fullName>
            </value>
            <value>
                <fullName>Debooked (not sold)</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>