force-app/main/default/objects/Opportunity/fields/Sales_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SDR_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>