force-app/main/default/objects/Opportunity/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Assisted</fullName>
            </value>
            <value>
                <fullName>Self-Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>