force-app/main/default/objects/Opportunity/fields/Special_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Special_Provisions__c</fullName>
    <inlineHelpText>Example: Use Limitations</inlineHelpText>
    <label>Special Provisions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>