force-app/main/default/objects/Opportunity/fields/SQO_Date_Opp__c.field-meta.xml
<CustomField>
    <fullName>SQO_Date_Opp__c</fullName>
    <label>SQO Date (Opp)</label>
    <type>Date</type>
</CustomField>