force-app/main/default/objects/Opportunity/fields/States_Operating_In__c.field-meta.xml
<CustomField>
    <fullName>States_Operating_In__c</fullName>
    <label>States Operating In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>