force-app/main/default/objects/Opportunity/fields/Teams_Using_Dazos__c.field-meta.xml
<CustomField>
    <fullName>Teams_Using_Dazos__c</fullName>
    <label>Teams Using Dazos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>VOB</fullName>
            </value>
            <value>
                <fullName>UR</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Contact Center Only</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Development or Donations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>