force-app/main/default/objects/Opportunity/fields/Which_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Which_Competitor__c</fullName>
    <label>Which Competitor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Kipu CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>