force-app/main/default/objects/Opportunity/fields/X18_Digit_SFDC_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_SFDC_Opp_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit SFDC Opp ID</label>
    <type>Text</type>
</CustomField>