force-app/main/default/objects/Opportunity/recordTypes/Expansion.recordType-meta.xml
<RecordType>
    <fullName>Expansion</fullName>
    <active>true</active>
    <businessProcess>Expansion</businessProcess>
    <description>An Expansion record reflects an increase in business with an existing customer, such as upsells or cross-sells. It captures growth opportunities within the current account.</description>
    <label>Expansion</label>
</RecordType>