force-app/main/default/objects/Opportunity/recordTypes/Internal_Admin_Use.recordType-meta.xml
<RecordType>
    <fullName>Internal_Admin_Use</fullName>
    <active>true</active>
    <businessProcess>New Business</businessProcess>
    <label>Internal Admin Use</label>
</RecordType>