force-app/main/default/objects/Opportunity/recordTypes/New_Business.recordType-meta.xml
<RecordType>
    <fullName>New_Business</fullName>
    <active>true</active>
    <businessProcess>New Business</businessProcess>
    <description>A New Business record represents a first-time sale or opportunity with a new customer. It typically involves initial prospecting, qualification, and closing of the first deal.</description>
    <label>New Business</label>
</RecordType>