force-app/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>Renewal</businessProcess>
    <description>A Renewal record tracks the continuation of an existing contract or subscription. It helps ensure timely follow-up and retention by managing the renewal cycle.</description>
    <label>Renewal</label>
</RecordType>