force-app/main/default/objects/Opportunity/validationRules/ACV_Override_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>ACV_Override_Requirement</fullName>
    <active>false</active>
    <description>In order to override/edit the ACV amount both the Override Checkbox and Override reason must be populated.</description>
    <errorConditionFormula>AND(
 ISCHANGED(ACV__c),    
 ACV__c &lt;&gt; PRIORVALUE(ACV__c),
 ISBLANK(ACV_Override_Reason__c),
 NOT(ISBLANK( SyncedQuoteId ))
)</errorConditionFormula>
    <errorMessage>ACV Override Reason required to change ACV amount when Quote is synced.</errorMessage>
</ValidationRule>