force-app/main/default/objects/Opportunity/validationRules/Close_Opportunity_Button.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Opportunity_Button</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 ISCHANGED(StageName),
 NOT(ISNEW()),
 IsClosed = TRUE,
 Ready_To_Close__c = FALSE,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;

)</errorConditionFormula>
    <errorMessage>You must use the &apos;Close Opportunity&apos; button to move the stage to Closed Won or Closed Lost.</errorMessage>
</ValidationRule>