force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Opportunities_No_Edits.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Opportunities_No_Edits</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISCHANGED(StageName) = FALSE,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Closed Won Opportunities cannot be edited.</errorMessage>
</ValidationRule>