force-app/main/default/objects/Opportunity/validationRules/Contract_and_Close_Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_and_Close_Fields_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  ISPICKVAL(StageName, &quot;Contract &amp; Close&quot;),
OR(
  ISBLANK( Required_Integrations__c ),
  ISBLANK( Data_Migration_Requirements__c ) 

))</errorConditionFormula>
    <errorMessage>Please add Required Integrations and Data Migration Details</errorMessage>
</ValidationRule>