force-app/main/default/objects/Opportunity/validationRules/Dazos_Team_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dazos_Team_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  ISPICKVAL(StageName, &quot;Demo &amp; Solutioning&quot;),
OR(
  ISBLANK( TEXT( Teams_Using_Dazos__c ))))</errorConditionFormula>
    <errorDisplayField>Teams_Using_Dazos__c</errorDisplayField>
    <errorMessage>Please add details for Teams Using Dazos</errorMessage>
</ValidationRule>