force-app/main/default/objects/Opportunity/validationRules/Lost_To_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_To_Competitor</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISCHANGED(StageName),
    ISPICKVAL(Loss_Reason__c, &quot;Lost to Competitor&quot;),
    ISBLANK(TEXT(Competitors__c))
)</errorConditionFormula>
    <errorDisplayField>Competitors__c</errorDisplayField>
    <errorMessage>Please select a Competitor when Loss Reason is &apos;Lost to Competitor&apos;</errorMessage>
</ValidationRule>