force-app/main/default/objects/Opportunity/validationRules/Other_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Details_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISPICKVAL(Loss_Reason__c, &quot;Other&quot;),
    ISBLANK( Other_Details__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Details__c</errorDisplayField>
    <errorMessage>Please add Other Details when Loss Reason is &apos;Other&apos;</errorMessage>
</ValidationRule>