force-app/main/default/objects/Opportunity/validationRules/Prevent_Non_Admins_from_Editing_ACV_Grth.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Non_Admins_from_Editing_ACV_Grth</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),                         /* Only applies to existing records */
  ISCHANGED( Original_ACV__c ),             /* User is trying to change the field */
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;  /* Non-admins only */
)</errorConditionFormula>
    <errorDisplayField>ACV_Growth__c</errorDisplayField>
    <errorMessage>Original ACV can only be set or edited by a System Administrator.</errorMessage>
</ValidationRule>