force-app/main/default/objects/Opportunity/validationRules/Qualification_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualification_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  ISPICKVAL(StageName, &quot;Pricing &amp; Negotiation&quot;),
OR(
  ISBLANK( TEXT(Current_CRM__c)),
  ISBLANK( TEXT( Current_EMR__c)),
  ISBLANK( TEXT( Current_VOIP__c ))))</errorConditionFormula>
    <errorMessage>Please add Current EMR, CRM And VOIP</errorMessage>
</ValidationRule>