force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>AE_Owner__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Headquarters__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>MRR__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>States_Operating_In__c</columns>
    <columns>Loss_Reason__c</columns>
    <columns>Closed_Lost_Reason__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Implementation_Manager__c</columns>
    <columns>Customer_Success_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Sutton</value>
    </filters>
    <label>All Opportunities</label>
</ListView>