force-app/main/default/objects/Opportunity/listViews/Brooke_List_View_Custom.listView-meta.xml
<ListView>
    <fullName>Brooke_List_View_Custom</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Brooke - List View Custom</label>
</ListView>